[gd_scene load_steps=10 format=3 uid="uid://c2b1dbpupnwdo"]

[ext_resource type="Texture2D" uid="uid://cyteuuvenp7g5" path="res://assets/gfx/ui-elements/start-bg.png" id="1_bk5sj"]
[ext_resource type="Script" path="res://src/start_screen.gd" id="2_by7ql"]
[ext_resource type="AudioStream" uid="uid://cnmp3b7y30xpu" path="res://assets/sfx/UI_button_1.wav" id="3_anp60"]
[ext_resource type="Texture2D" uid="uid://hxihek1yb5si" path="res://assets/gfx/ui-elements/btn-play.png" id="3_rtw1m"]
[ext_resource type="FontFile" uid="uid://bq8pv3ex6ljl6" path="res://assets/fonts/Heyho-Regular.ttf.otf" id="4_3c1qa"]
[ext_resource type="Texture2D" uid="uid://c7qp6gwgkhglj" path="res://assets/gfx/ui-elements/btn-sound-off.png" id="5_5krr6"]
[ext_resource type="Texture2D" uid="uid://dneyqk6pwu0yd" path="res://assets/gfx/ui-elements/btn-sound-on.png" id="6_mulm4"]
[ext_resource type="Texture2D" uid="uid://btpk7x03ee0xr" path="res://assets/gfx/ui-elements/btn-music-off.png" id="7_nuqu8"]
[ext_resource type="Texture2D" uid="uid://dyusjoxhuokni" path="res://assets/gfx/ui-elements/btn-music-on.png" id="8_hm1dv"]

[node name="StartScreen" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_bk5sj")
script = ExtResource("2_by7ql")

[node name="StartButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(440, 235)
layout_mode = 0
offset_left = 1408.0
offset_top = 224.0
offset_right = 1448.0
offset_bottom = 264.0
texture_normal = ExtResource("3_rtw1m")

[node name="Label" type="Label" parent="StartButton"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -6
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_3c1qa")
theme_override_font_sizes/font_size = 196
text = "Play"
horizontal_alignment = 1

[node name="SoundButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(265, 205)
layout_mode = 0
offset_left = 1488.0
offset_top = 552.0
offset_right = 1753.0
offset_bottom = 752.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("5_5krr6")
texture_pressed = ExtResource("6_mulm4")

[node name="MusicButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(265, 205)
layout_mode = 0
offset_left = 1488.0
offset_top = 800.0
offset_right = 1753.0
offset_bottom = 1005.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("7_nuqu8")
texture_pressed = ExtResource("8_hm1dv")

[node name="sfx_button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_anp60")
bus = &"Sound"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="toggled" from="SoundButton" to="." method="_on_sound_button_toggled"]
[connection signal="toggled" from="MusicButton" to="." method="_on_music_button_toggled"]
